# youtube-workbench-backend

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: api_spec.md  development_notes.md  development_plan.md  spec.md
dotenv/: .env.example
organizer/: apps.py  models.py  serializers.py  urls.py  views.py
organizer/management/commands/: seed_snapshots.py
organizer/migrations/: 0001_initial.py
organizer/tests/: factories.py  test_health.py  test_models.py  test_snapshot_api.py
